# codingAgent

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agentbus/: __init__.py  actions.py  cli.py  control.py  events.py  models.py  reducer.py  runner.py  store.py  streaming.py
agentbus/adapters/: __init__.py  base.py  claude.py  codex.py  cursor.py
docs/: architecture.md  operations.md  protocol.md
scripts/: agentbus-collab.sh
tests/: test_actions.py  test_cli.py  test_control.py  test_guardrails.py  test_reducer.py  test_reviewer_model.py  test_runner_cli_helpers.py  test_store.py  test_streaming.py
