[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbus"
version = "0.1.0"
description = "Shared-log collaborative execution agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "AgentBus" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agentbus = "agentbus.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
